fixed row gap

--- a/about.css
+++ b/about.css
@@ -5,6 +5,7 @@
      display: flex;
      flex-direction: row;
      column-gap: 30px;
+     row-gap: 30px;
      justify-content: center;
      width: 100vw;
      flex-wrap: wrap;
